Moving to express server

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<title>AJAX, JSON y APIs</title>
 </head>
 <body>
-	<ul id="squads"></ul>
+	<ul id="pokemons"></ul>
 	<script src="./js/app.js"></script>
 </body>
 </html>
