--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<ul id="pokemons"></ul>
+	<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="./js/app.js"></script>
 </body>
 </html>
